--- a/app/src/main/res/layout/activity_teman_baru.xml
+++ b/app/src/main/res/layout/activity_teman_baru.xml
@@ -20,7 +20,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/cardview_light_background"
-            android:hint="Nama" />
+            android:hint="Nama"
+            android:inputType="textPersonName"
+            android:singleLine="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -38,7 +40,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/cardview_light_background"
-            android:hint="Telpon" />
+            android:hint="Telpon"
+            android:inputType="phone"
+            android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
